# MLDAG

./: .env.example  .gitignore  .gitmodules  Experiment.py  Experiment.yaml  README.md  README_monitoring.md  Resource.py  TrainingRun.py  TrainingRun.yaml  analyze_cache_performance.py  annex_helper.py  bigger_global_pretraining.dag  compare_transfer_attempts.py  config.yaml  config_example.yaml  csv_resources.txt  dag_status_report.py  daggen.py  dagman_monitor.py  experiment_report.py  filter.py  finetune.sh  finetune_config.yaml  full.csv  geld.py  global_pretraining.dag  global_pretraining.dag.bk  global_pretraining_in_aws.dag  global_pretraining_with_ospool.dag  global_pretraining_with_ospool.dag.condor.sub  global_pretraining_with_ospool.dag.metrics  global_pretraining_with_ospool.dag.rescue001  global_pretraining_with_ospool.dag.rescue002  global_pretraining_with_ospool.dag.rescue003  global_pretraining_with_ospool.dag.rescue004  global_pretraining_with_ospool.dag.rescue005  global_pretraining_with_ospool.dag.rescue006  global_pretraining_with_ospool.dag.rescue007  global_pretraining_with_ospool.dag.rescue008  (+46 more)
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  requirements.txt
2025-10-15/: experiment_summary_report.txt
2025-11-14/: experiment_summary_report.txt
analysis/: add_val_loss.py  analyze_cache_performance.py  analyze_epoch_durations.py  analyze_gpu_ospool.py  analyze_h200_hangs.py  analyze_run9_epoch3.py  compare_clusters.py  compare_transfer_attempts.py  dag_status_report.py  find_slow_transfers.py  gpu_runtime_boxplot.py  job_histogram.py  plot_val_loss.py
backlog/: config.yml
big_run/: experiment_summary_report.txt
combined/: experiment_summary_report.txt
data/: gel_crondor.py
ml/: exec.sh  (+1 more)
(+102 files in other folders)
