[project]
name = "mldag-fixed-global"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "typer>=0.16.0",
]
