[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mldag"
version = "0.1.0"
description = "HTCondor ML training DAG generation, monitoring, and reporting"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "elasticsearch>=9.1.2",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.2",
    "polars>=1.36.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "typer>=0.16.0",
    "plotly>=5.24.0",
]

[project.scripts]
mldag-gen     = "mldag.daggen:app"
mldag-csv     = "mldag.report.csv:main"
mldag-report  = "mldag.report.experiment:main"
mldag-monitor = "mldag.monitor.htcondor:main"
mldag-post    = "mldag.provenance.post:main"
mldag-query   = "mldag.provenance.query:main"

[tool.hatch.build.targets.wheel]
packages = ["mldag"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
